# ambrosio

./: .gitignore  README.md
app/: .env.example  app.json  package.json
app/android/: settings.gradle
app/android/app/: _BUCK  build.gradle
app/android/app/src/debug/java/com/ambrosio/: ReactNativeFlipper.java
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/ambrosio/: MainActivity.java  MainApplication.java
app/android/app/src/main/res/values/: strings.xml
app/ios/: Podfile
app/ios/ambrosio/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
app/ios/ambrosio.xcodeproj/: project.pbxproj
app/ios/ambrosio.xcodeproj/xcshareddata/xcschemes/: ambrosio.xcscheme
app/ios/ambrosioTests/: ambrosioTests.m
app/src/: App.js  NotificationHandler.js  NotificationService.js
service/: pyproject.toml
service/src/: main.py  notification.py  scheduler.py
