[tool.poetry]
name = "ambrosio"
version = "0.1.0"
description = "Trigger notifications for your Android device"
authors = ["João Santos <joaorafaelsantos@outlook.pt>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^5.0.1"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}
python-dotenv = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
